# chessctl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: initial-game.json
src/chessctl/: __init__.py  cli.py  web.py
src/chessctl/web_static/: __init__.py  app.js  index.html  styles.css
tests/: test_cli.py  test_web.py
