[project]
name = "chessctl"
version = "0.1.0"
description = "Agent-friendly chess rules and game-state CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "chess>=1.11.2",
]

[project.scripts]
chessctl = "chessctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/chessctl"]
